static/styles.css
body {
  margin: 0;
}

form {
  width: 300px;
  margin: 0 auto;
  margin-top: 0;
}

* {
  box-sizing: border-box;
}

h1,
h2,
h3,
h4 {
  /*font-family: 'PT Sans Caption';*/
  margin-bottom: 10px;
}

h4 {
  /*font-weight: bold;*/
  font-size: 18px;
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
  margin-bottom: 0.5rem;
  font-family: inherit;
  font-weight: 500;
  line-height: 1.1;
  color: inherit;
}

p,
a {
  font-family: 'Habibi';
  font-size: 18px;
  padding-top: 4px;
}

a {
  text-decoration: none;
  text-align: center;
}

h2 {
  font-size: 30px;
}

h1 {
  font-size: 34px;
}

#content {
  left: auto;
  width: 1000px;
  margin: auto;
}

table {
  margin: auto;
}

tbody tr:nth-child(odd) {
  background-color: #d8ecf3;
}

th,
td {
  border-collapse: collapse;
  border: 1px solid #777;
  padding: 8px;
  text-align: left;
}

polymer-slideshow {
  width: 100% !important;
  height: 50% !important;
  padding-bottom: 38%;
}

.splash {
  text-align: center;
  margin: 10% 0 0;
  box-sizing: border-box;
}

.splash .message {
  font-size: 72px;
  line-height: 72px;
  text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
  text-transform: uppercase;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.splash .fa-spinner {
  text-align: center;
  display: inline-block;
  font-size: 72px;
  margin-top: 50px;
}

.page-content {
  border-right: 1px solid black;
}

.page-host {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  overflow-x: hidden;
  overflow-y: auto;
}

@media print {
  .page-host {
    position: absolute;
    left: 10px;
    right: 0;
    top: 50px;
    bottom: 0;
    overflow-y: inherit;
    overflow-x: inherit;
  }
}

section {
  margin: 0 20px;
}

.navbar-nav .loader {
  margin: 12px 24px 0 6px;
}

.pictureDetail {
  max-width: 425px;
}

/* animate page transitions */
section.au-enter-active {
  -webkit-animation: fadeInRight 1s;
  animation: fadeInRight 1s;
}

.au-stagger {
  /* 50ms will be applied between each successive enter operation */
  -webkit-animation-delay: 50ms;
  animation-delay: 50ms;
}

.card-container.au-enter {
  opacity: 0 !important;
}

#mobilemenutoggle {
  cursor: pointer;
}

.card-container.au-enter-active {
  -webkit-animation: fadeIn 2s;
  animation: fadeIn 2s;
}

.card {
  overflow: hidden;
  position: relative;
  border: 1px solid #ccc;
  border-radius: 8px;
  text-align: center;
  padding: 0;
  background-color: #337ab7;
  color: rgb(136, 172, 217);
  margin-bottom: 32px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
}

.card .content {
  margin-top: 10px;
}

.card .content .name {
  color: white;
  text-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
  font-size: 18px;
}

.card .header-bg {
  /* This stretches the canvas across the entire hero unit */
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 70px;
  border-bottom: 1px #fff solid;
  border-radius: 6px 6px 0 0;
}

.card .avatar {
  position: relative;
  margin-top: 15px;
  z-index: 100;
}

.card .avatar img {
  width: 100px;
  height: 100px;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
  border: 2px #fff solid;
}

/* animation definitions */
@-webkit-keyframes fadeInRight {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: none;
    transform: none;
  }
}

@keyframes fadeInRight {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(100%, 0, 0);
    -ms-transform: translate3d(100%, 0, 0);
    transform: translate3d(100%, 0, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: none;
    -ms-transform: none;
    transform: none;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

/* Custom CSS Starts here */
.navbar-custom {
  background-color: #496067;
  color: white;
  position: relative;
  min-height: 50px;
  margin-bottom: 0;
  border: 1px solid transparent;
}

.navbar-custom a {
  color: white;
}

.navbar-brand:hover,
.navbar-brand:focus {
  background-color: #eee;
  color: #23527c;
}

.material-content {
  padding: 10px;
}

.material-content-faq {
  padding: 10px;
}

.material-content-h1,
.material-content-h2 {
  text-align: center;
  margin-top: 15px;
}

.material-content-h2 {
  font-size: 30px;
}

.material-content-h1 {
  font-size: 34px;
  color: black;
}

.material-content-p {
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 10px;
  font-size: 16px;
  text-align: center;
}

.material-content-p-bigger {
  font-size: 24px;
  max-width: 800px;
}

.material-content-ul {
  max-width: 400px;
  margin-left: auto;
  margin-right: auto;
  font-size: 16px;
}

.material-header-content {
  max-width: 500px;
  margin-left: auto;
  margin-right: auto;
}

.material-header-h3 {
  color: white;
}

.material-header-h3-call {
  color: white;
  font-size: 22pt;
}

.material-header-h4 {
  text-align: center;
  margin-top: 5px;
}

.slideshowimage {
  width: 100%;
  height: 0;
}

.paper-card-img {
  text-align: center;
}

.drawer-container {
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
  background-color: white;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  z-index: 999;
}

#drawerContainer {
  position: fixed;
  width: 100%;
  top: 0;
  right: 0;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  z-index: 999;
}

.drawer-container2 {
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
  background-color: white;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  z-index: 999;
}

::-webkit-scrollbar {
  -webkit-appearance: none;
  width: 10px;
}

::-webkit-scrollbar:vertical {
  width: 10px;
}

::-webkit-scrollbar:horizontal {
  height: 10px;
}

::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 10px;
  border: 2px solid #ffffff;
}

::-webkit-scrollbar-track {
  border-radius: 10px;
  background-color: #ffffff;
}

@media screen and (min-width: 900px) {
  .content-block {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: auto;
  }

  .main-panel {
    margin-right: 190px;
  }

  #scroller {
    height: 100vh;
    overflow-y: scroll;
  }
}

.paper-card-0 .header.paper-card .title-text.paper-card {
  padding: 16px;
  font-size: 24px;
  font-weight: 400;
  color: #000;
}

.paper-drawer-panel-0 iron-selector.paper-drawer-panel > #drawer.paper-drawer-panel {
  background-color: #c0c0c0;
  width: 210px;
}

@media screen and (max-width: 900px) {
  .drawer {
    background-color: rgb(192, 192, 192);
    float: right;
    height: 100%;
    display: None;
  }

  .drawer-container {
    height: 100%;
    background-color: rgba(0, 0, 0, 0.5);
    position: fixed;
    width: 100%;
    display: none;
  }

  .content-block {
    overflow-x: hidden;
  }

  ::-webkit-scrollbar:vertical {
    width: 0 !important;
  }

  ::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 0 !important;
  }
}

@media screen and (max-width: 400px) {
  ::-webkit-scrollbar:vertical {
    width: 0 !important;
  }
  ::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 0 !important;
  }
}

ul > li {
  font-size: 14px;
  line-height: 1.42857143;
}

.search-table-outer {
  overflow-x: auto;
}

.aut-sort::after {
  font-family: FontAwesome;
  padding-left: 0.5em;
  width: 1.28571429em;
  display: inline-block;
  text-align: center;
}

.aut-sortable::after {
  content: "\f0dc";
}

.aut-asc::after {
  content: "\f160";
}

.aut-desc::after {
  content: "\f161";
}

paper-material.material-header x-scope paper-material-0 {
  background-color: #c0c0c0;
}

paper-material.material-content.x-scope.paper-material-0 {
  padding-bottom: 0;
}

.spaceUnderSlideShow {
  margin-top: auto;
}

.question {
  margin-bottom: 0;
}

.answer {
  margin-bottom: 1em;
  font-style: italic;
}

.home-slideshow {
  width: 100% !important;
  height: 0 !important;
  padding-bottom: 50%;
}

.splash {
  text-align: center;
  margin: 10% 0 0;
  box-sizing: border-box;
}

.splash .message {
  font-size: 72px;
  line-height: 72px;
  text-shadow: rgba(0, 0, 0, 0.5) 0 0 15px;
  text-transform: uppercase;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.splash .fa-spinner {
  /*text-align: center;*/
  display: inline-block;
  font-size: 72px;
  margin-top: 50px;
}

.page-host {
  position: absolute;
  left: 0;
  right: 0;
  top: 50px;
  bottom: 0;
  overflow-x: hidden;
  overflow-y: auto;
}

@media print {
  .page-host {
    position: absolute;
    left: 10px;
    right: 0;
    top: 50px;
    bottom: 0;
    overflow-y: inherit;
    overflow-x: inherit;
  }
}

section {
  margin: 0 20px;
}

.navbar-nav li.loader {
  margin: 12px 24px 0 6px;
}

.pictureDetail {
  max-width: 425px;
}

/* animate page transitions */
section.au-enter-active {
  animation: fadeInRight 1s;
}

div.au-stagger {
  /* 50ms will be applied between each successive enter operation */
  animation-delay: 50ms;
}

.card-container.au-enter {
  opacity: 0 !important;
}

.card-container.au-enter-active {
  animation: fadeIn 2s;
}

.card {
  overflow: hidden;
  position: relative;
  border: 1px solid #ccc;
  border-radius: 8px;
  text-align: center;
  padding: 0;
  background-color: #337ab7;
  color: rgb(136, 172, 217);
  margin-bottom: 32px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
}

.card .content {
  margin-top: 10px;
}

.card .content .name {
  color: white;
  text-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
  font-size: 18px;
}

.card .header-bg {
  /* This stretches the canvas across the entire hero unit */
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 70px;
  border-bottom: 1px #fff solid;
  border-radius: 6px 6px 0 0;
}

.card .avatar {
  position: relative;
  margin-top: 15px;
  z-index: 100;
}

.card .avatar img {
  width: 100px;
  height: 100px;
  border-radius: 50%;
  border: 2px #fff solid;
}

/* animation definitions */
@-webkit-keyframes fadeInRight {
  0% {
    opacity: 0;
    transform: translate3d(100%, 0, 0);
  }
  100% {
    opacity: 1;
    transform: none;
  }
}

@keyframes fadeInRight {
  0% {
    opacity: 0;
    transform: translate3d(100%, 0, 0);
  }
  100% {
    opacity: 1;
    transform: none;
  }
}

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

div#mainContainer.flex.style-scope.paper-header-panel {
  background-color: #505050;
}

.paper-material-0 {
  display: block;
  position: relative;
}

.paper-item-0 {
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  -ms-flex-direction: row;
  -webkit-flex-direction: row;
  flex-direction: row;
  -ms-flex-align: center;
  -webkit-align-items: center;
  align-items: center;
  font-family: 'Roboto', 'Noto', sans-serif;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
}

.paper-item-0, .paper-item-0 .paper-item.paper-item {
  display: block;
  position: relative;
  min-height: 48px;
  padding: 0px 16px;
}

.material-header {
  height: 68px;
  margin-left: auto;
  margin-right: -281px;
  overflow-y: auto;
  min-height: 68px;
  background-color: #881204 !important;
  margin-bottom: auto;
  padding-left: 1px;
}

.page-content {
  border-right: 1px solid black;
  background-color: white;
}

.page-host {
  top: 0;
}

